fix drawcard function